--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,6 @@
 
 # Visual Studio cache directory
 .vs/
-
 # Gradle cache directory
 .gradle/
 
@@ -42,6 +41,7 @@ ExportedObj/
 *.mdb
 *.opendb
 *.VC.db
+*.idea
 
 # Unity3D generated meta files
 *.pidb.meta
